# tiff-filter

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: combiner.ipynb  downsizer.ipynb  example.ipynb  point_cloud_0.pcd  total_0_sparse_filtered.npz  tree_pcd.pcd
src/: filter_tiff.py
src/tiff_filter/: filter_tiff.py  point_cloud.py
src/tiff_filter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
